Change html report path in pytest.ini Add pytest-html package to requirements.txt

--- a/test-scripts/pytest.ini
+++ b/test-scripts/pytest.ini
@@ -1,5 +1,5 @@
 # pytest.ini configuration file defining default options for Playwright tests
 
 [pytest]
-addopts = --headed --browser chromium --html=report.html --self-contained-html
-testpaths = test-scripts --slowmo=200
+addopts = --headed --browser chromium --html=execution-reports/report.html --self-contained-html
+testpaths = test-scripts --slowmo=500
